# LLM_study_repo

./: README.md
LLM_project/inference/transformers_exp/: pyproject.toml
LLM_project/inference/transformers_exp/configs/: qwen_base.yaml  qwen_zundamon_lora.yaml
LLM_project/inference/transformers_exp/src/: run_inference.py
LLM_project/inference/vllm_exp/client/: inference.py
LLM_project/inference/vllm_exp/configs/: request.yaml
LLM_project/inference/vllm_exp/configs/server/: qwen_base.yaml  qwen_zundamon.yaml
LLM_project/inference/vllm_exp/prompts/: prompt.txt
LLM_project/training/: pyproject.toml
LLM_project/training/configs/: lora.yaml  model.yaml  sft.yaml
LLM_project/training/data/: train.jsonl  valid.jsonl
LLM_project/training/src/: preprocess.py  pull_data.py  train_sft.py
transformers_exp/: pyproject.toml
transformers_exp/configs/: qwen_base.yaml  qwen_zundamon_lora.yaml
transformers_exp/prompt/: test_prompt.txt
vllm_exp/: pyproject.toml
vllm_exp/client/: inference.py
vllm_exp/configs/server/: qwen.yaml
