[project]
name = "llm-exp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "tokenizers>=0.22.2",
    "transformers",
    "triton>=3.4.0",
]

[tool.uv.sources]
transformers = { git = "https://github.com/huggingface/transformers.git" }
